fix pop up message not showing

--- a/src/components/SingleArticle.css
+++ b/src/components/SingleArticle.css
@@ -85,7 +85,7 @@
   pointer-events: none;
 }
 
-#deleted-msg {
+.pop-up-msg {
   border-radius: 5px;
   padding: 15px 0;
   width: 200px;
